--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
+  "devDependencies": {
+    "bl": ">=2.2.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
