--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
+  "homepage": "https://phillipmanapat.com/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bl": ">=2.2.1",
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "bl": ">=2.2.1",
     "bootstrap": "^4.5.3",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
@@ -19,6 +21,8 @@
     "bl": ">=2.2.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
